crates/snapshots/snapshots/cli_snapshots__safety__safety_missing_vue_sass.snap
---
source: crates/snapshots/tests/cli_snapshots/safety.rs
expression: document
---
case: safety_missing_vue_sass

--- step: retained unscoped Sass ---
status: 0
stdout: "--- a/Card.vue\n+++ b/Card.vue\n@@ -1,10 +1,7 @@\n <template>\n-  <main class=\"card\">Card</main>\n+  <main class=\"card m-[7px]\">Card</main>\n   <span>Leaf</span>\n </template>\n-<style scoped>\n-.card { margin: 7px; }\n-</style>\n <style lang=\"scss\">\n .note { color: red; }\n </style>\nPreviewed 1 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: "warning[unscoped-style-block] Card.vue:8:20-10:1 The global reach of this unscoped style block could not be proven.\n"
workspace delta:
  unchanged

--- step: required without force ---
status: 1
stdout: ""
stderr: "tw-migrate: Sass must be installed in the target project.\n"
workspace delta:
  unchanged

--- step: required with force ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: "skipped[.] Sass must be installed in the target project.\n"
workspace delta:
  unchanged
