crates/snapshots/snapshots/cli_snapshots__safety__safety_reference_only_workspace.snap
---
source: crates/snapshots/tests/cli_snapshots/safety.rs
expression: document
---
case: safety_reference_only_workspace

--- step: selected package only ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[reference-only-css-module-consumer] ../app/Button.tsx A reference-only source uses this CSS Module, so it is retained.\nwarning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\n"
workspace delta:
  unchanged
