crates/snapshots/snapshots/cli_snapshots__safety__safety_workspace_consumer.snap
---
source: crates/snapshots/tests/cli_snapshots/safety.rs
expression: document
---
case: safety_workspace_consumer

--- step: workspace write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: "warning[unproven-shared-entry-flow] shared/Button.module.css A consumer flow could not be proven to load the shared Tailwind entry, so the stylesheet is retained.\n"
workspace delta:
  unchanged
